Restaurant Site 3 Working

--- a/Styles/restaurantStyles.css
+++ b/Styles/restaurantStyles.css
@@ -1,12 +1,12 @@
 /*
 Creator: C. R. Oberembt
-Date created: 01/20/2019
-Date last modified: 01/20/2019
+Date created: 01/19/2019
+Date last modified: 01/21/2019
 */
 
 header, footer {
-  background-color: Black;
-  color: White;
+  background-color: DimGray;
+  color: Black;
   font-family: 'Rubik', sans-serif;
   padding: 20px 10px 20px 10px
 }
@@ -23,32 +23,26 @@ h1 {
   font-family: 'Staatliches', cursive;
 }
 
-/*   Visited links appear in a different color than their default state.
-When you hover over a link, the text is bold. This should only be when hovering. Otherwise, the text should be the normal thickness.
-Active links should not be underlined. */
-
 nav {
-  background-color: Black;
+  background-color: DimGray;
   padding: 20px 10px 20px 10px;
 }
 
-a {
-  color: hotpink;
+#bootstrap-overrides .nav-link {
 }
 
-a:active {
+#bootstrap-overrides a {
+  color: Red;
+}
+
+#bootstrap-overrides a:active {
   text-decoration: none;
 }
 
-a:hover {
+#bootstrap-overrides a:hover {
   font-weight: bold;
 }
 
-a:visited {
-  color: White;
+#bootstrap-overrides a:visited {
+  color: #0d2618;
 }
-
-/* a:hover, a:visited, a:link, a:active
-{
-    text-decoration: none;
-} */
